--- a/web/homepage.css
+++ b/web/homepage.css
@@ -110,7 +110,7 @@ header {
     border: 5px solid gold;
 }
 
-.assignment {
+.present {
     text-align: center;
     color: gold;
     font-size: 2vw;
