--- a/web/journal.css
+++ b/web/journal.css
@@ -109,7 +109,7 @@ input.ex1:hover {
 .littlePad {
     padding-top: 110px;
     padding-bottom: 100px;
-  padding-left: 400px;
+  padding-left: 200px;
 }
 
 .read {
@@ -143,7 +143,13 @@ input.ex1:hover {
     font-family: Parchment;
     color: blue;
     padding-top: 100px;
-    padding-left: 700px;
+    padding-left: 550px;
+}
+
+.timestamppad {
+    padding-top: 110px;
+    padding-bottom: 100px;
+    padding-left: 400px;
 }
 
 div {
