Still Formatting Write 2

--- a/web/journal.css
+++ b/web/journal.css
@@ -159,6 +159,10 @@ input.ex1:hover {
     padding-left: 350px;
 }
 
+.biggerpad {
+    padding-left: 350px;
+}
+
 //div {
     border: 2px solid red;
 }
