Trying to get write to write 8

--- a/web/journal.css
+++ b/web/journal.css
@@ -163,6 +163,11 @@ input.ex1:hover {
     padding-left: 350px;
 }
 
+.entryenter {
+    height: 700px;
+    width: 400px;
+}
+
 //div {
     border: 2px solid red;
 }
